<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_menu_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/bottom_nav_menu_home"
        android:contentDescription="@string/bottom_nav_menu_home"
        />
    <item
        android:id="@+id/bottom_nav_menu_add"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/bottom_nav_menu_add"
        android:contentDescription="@string/bottom_nav_menu_add"
        />
    <item
        android:id="@+id/bottom_nav_menu_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/bottom_nav_menu_profile"
        android:contentDescription="@string/bottom_nav_menu_profile"
        />
</menu>