<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/left_nav_menu_category"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/left_nav_menu_category"
        android:contentDescription="@string/left_nav_menu_category">
    </item>
    <item
        android:id="@+id/left_nav_menu_product"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/left_nav_menu_product"
        android:contentDescription="@string/left_nav_menu_product">
    </item>
    <item
        android:id="@+id/left_nav_menu_storage"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/left_nav_menu_storage"
        android:contentDescription="@string/left_nav_menu_storage">
    </item>
</menu>