<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/left_nav_menu_test"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/left_nav_menu_test"
        android:contentDescription="@string/left_nav_menu_test">
        <menu>
            <item
                android:id="@+id/left_nav_menu_home"
                android:icon="@drawable/baseline_home_24"
                android:title="@string/left_nav_menu_home"
                android:contentDescription="@string/left_nav_menu_home"
                />
            <item
                android:id="@+id/left_nav_menu_add"
                android:icon="@drawable/baseline_add_24"
                android:title="@string/left_nav_menu_add"
                android:contentDescription="@string/left_nav_menu_add"
                />
            <item
                android:id="@+id/left_nav_menu_profile"
                android:icon="@drawable/baseline_person_24"
                android:title="@string/left_nav_menu_profile"
                android:contentDescription="@string/left_nav_menu_profile"
                />
        </menu>
    </item>
    <item
        android:id="@+id/left_nav_menu_category"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/left_nav_menu_category"
        android:contentDescription="@string/left_nav_menu_category">
        <menu>
            <item
                android:id="@+id/left_nav_menu_category_home"
                android:icon="@drawable/baseline_home_24"
                android:title="Category List"
                android:contentDescription="Category List"
                />
            <item
                android:id="@+id/left_nav_menu_category_add"
                android:icon="@drawable/baseline_add_24"
                android:title="Category Add"
                android:contentDescription="Category Add"
                />
            <item
                android:id="@+id/left_nav_menu_category_info"
                android:icon="@drawable/baseline_person_24"
                android:title="Category Info"
                android:contentDescription="Category Info"
                />
        </menu>
    </item>
    <item
        android:id="@+id/left_nav_menu_product"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/left_nav_menu_product"
        android:contentDescription="@string/left_nav_menu_product">
        <menu>
            <item
                android:id="@+id/left_nav_menu_product_home"
                android:icon="@drawable/baseline_home_24"
                android:title="Product List"
                android:contentDescription="Product List"
                />
            <item
                android:id="@+id/left_nav_menu_product_add"
                android:icon="@drawable/baseline_add_24"
                android:title="Product Add"
                android:contentDescription="Product Add"
                />
            <item
                android:id="@+id/left_nav_menu_product_info"
                android:icon="@drawable/baseline_person_24"
                android:title="Product Info"
                android:contentDescription="Product Info"
                />
        </menu>
    </item>
    <item
        android:id="@+id/left_nav_menu_storage"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/left_nav_menu_storage"
        android:contentDescription="@string/left_nav_menu_storage">
        <menu>
            <item
                android:id="@+id/left_nav_menu_storage_home"
                android:icon="@drawable/baseline_home_24"
                android:title="Storage List"
                android:contentDescription="Storage List"
                />
            <item
                android:id="@+id/left_nav_menu_storage_add"
                android:icon="@drawable/baseline_add_24"
                android:title="Storage Add"
                android:contentDescription="Storage Add"
                />
            <item
                android:id="@+id/left_nav_menu_storage_info"
                android:icon="@drawable/baseline_person_24"
                android:title="Storage Info"
                android:contentDescription="Storage Info"
                />
        </menu>
    </item>
</menu>