<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?attr/colorSecondary"
    tools:context=".fragments.StorageInsertFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/fragment_storage_insert_backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/button_back"
            android:textColor="?attr/colorSecondary"
            android:backgroundTint="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_storage_insert_textview_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:padding="0dp"
            android:text="@string/sample_text"
            android:textColor="?attr/colorError"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_storage_insert_backbutton" />

        <TextView
            android:id="@+id/fragment_storage_insert_textview_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:text="@string/text_storage_product"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/fragment_storage_insert_id_product"
            app:layout_constraintStart_toStartOf="parent" />
        <Spinner
            android:id="@+id/fragment_storage_insert_id_product"
            android:autofillHints="@string/hint_storage_product"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_storage_product"
            android:textColorHint="?attr/colorPrimary"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_storage_insert_textview_error" />

        <TextView
        android:id="@+id/fragment_storage_insert_textview_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:text="@string/text_storage_location"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/fragment_storage_insert_edittext_location"
        app:layout_constraintStart_toStartOf="parent" />
        <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fragment_storage_insert_edittext_location"
        android:autofillHints="@string/hint_storage_location"
        android:inputType="textMultiLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_storage_location"
        android:textColorHint="?attr/colorPrimary"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_storage_insert_id_product" />


        <TextView
            android:id="@+id/fragment_storage_insert_textview_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:text="@string/text_storage_quantity"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/fragment_storage_insert_edittext_quantity"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_storage_insert_edittext_quantity"
            android:autofillHints="@string/hint_storage_quantity"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="48dp"
            android:hint="@string/hint_storage_quantity"
            android:textColorHint="?attr/colorPrimary"
            android:textColor="?attr/colorPrimary"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_storage_insert_edittext_location" />
        <ImageButton
        android:id="@+id/fragment_storage_insert_submitbutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginTop="373dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="?attr/colorPrimary"
        android:contentDescription="@string/submit_button"
        android:scaleType="center"
        android:src="@drawable/baseline_done_24"
        app:tint="?attr/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_storage_insert_edittext_quantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>