<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?attr/colorSecondary"
    tools:context=".fragments.ProductInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/fragment_product_info_textview_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:padding="0dp"
            android:text="@string/sample_text"
            android:textColor="?attr/colorError"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_product_info_textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:text="@string/text_product_name"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/fragment_product_info_edittext_name"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_product_info_edittext_name"
            android:autofillHints="@string/hint_product_name"
            android:inputType="textMultiLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="48dp"
            android:hint="@string/hint_product_name"
            android:textColorHint="?attr/colorPrimary"
            android:textColor="?attr/colorPrimary"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_info_textview_error" />

        <TextView
            android:id="@+id/fragment_product_info_textview_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:text="@string/text_product_description"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/fragment_product_info_edittext_description"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_product_info_edittext_description"
            android:autofillHints="@string/hint_product_description"
            android:inputType="textMultiLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_product_description"
            android:textColorHint="?attr/colorPrimary"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_info_edittext_name" />

        <TextView
            android:id="@+id/fragment_product_info_textview_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:text="@string/text_product_price"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/fragment_product_info_edittext_price"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fragment_product_info_edittext_price"
            android:autofillHints="@string/hint_product_price"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_product_price"
            android:textColorHint="?attr/colorPrimary"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_info_edittext_description" />


        <TextView
            android:id="@+id/fragment_product_info_textview_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:text="@string/text_product_category"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/fragment_product_info_id_category"
            app:layout_constraintStart_toStartOf="parent" />
        <Spinner
            android:id="@+id/fragment_product_info_id_category"
            android:autofillHints="@string/hint_product_category"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hint_product_category"
            android:textColorHint="?attr/colorPrimary"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:backgroundTint="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_info_edittext_price" />

        <ImageButton
            android:id="@+id/fragment_product_info_submitbutton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:layout_marginTop="373dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="?attr/colorPrimary"
            android:contentDescription="@string/submit_button"
            android:scaleType="center"
            android:src="@drawable/baseline_edit_24"
            app:tint="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_info_id_category" />

        <ImageButton
            android:id="@+id/fragment_product_info_deletebutton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:layout_marginTop="373dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="?attr/colorError"
            android:contentDescription="@string/delete"
            android:scaleType="center"
            android:src="@drawable/baseline_remove_24"
            app:tint="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_product_info_id_category" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>